<resources>
    <string name="app_name">LMQ</string>
    <string name="upload_cancel">已取消上传</string>

    <string name="register_now">立即注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="find_password">找回密码</string>
    <string name="login_name">账号：</string>
    <string name="login_name_hint">手机号或昵称</string>
    <string name="register_name">昵称：</string>
    <string name="register_name_hint">请输入昵称</string>
    <string name="register_phone">手机号：</string>
    <string name="register_code">验证码：</string>
    <string name="register_code_hint">请输入手机验证码</string>
    <string name="register_password">密码：</string>
    <string name="change_password_old">旧密码：</string>
    <string name="change_password_old_hint">请输入旧密码</string>
    <string name="change_password_new">新密码：</string>
    <string name="change_password_new_hint">请输入新密码</string>
    <string name="register_password_hint">请输入密码</string>
    <string name="register_password_comfirm">确认密码：</string>
    <string name="register_password_comfirm_hint">请再次确认密码</string>
    <string name="register_password_comfirm_error">两次密码不一致</string>

    <string name="button_register">注册</string>
    <string name="button_login">登录</string>
    <string name="button_get_code">获取验证码</string>

    <string name="main_server">小区服务</string>
    <string name="main_shop">购物车</string>
    <string name="main_myself">个人中心</string>

    <string name="myself_balance_title">物业余额</string>
    <string name="myself_balance">物业余额（元）</string>
    <string name="myself_order">我的订单</string>
    <string name="myself_coupon">优惠券</string>
    <string name="myself_info">个人资料</string>
    <string name="myself_head">头像</string>
    <string name="myself_name">昵称</string>
    <string name="myself_change_pwd">修改密码</string>
    <string name="myself_feedback">意见反馈</string>
    <string name="myself_server">联系客服</string>
    <string name="myself_logout">退出登录</string>
    <string name="myself_login">点我登录</string>

    <string name="price_format">￥%s</string>
    <string name="cart_shop_price_format">总价：￥%s</string>

    <string name="shop_pay">订单支付</string>
    <string name="receive_remart_hint">请填写要补充的内容</string>
    <string name="order_select_coupon">选择优惠券</string>
    <string name="coupon_valid_time_format">有效期：%s</string>
    <string name="order_no_coupon">无可用优惠券</string>
    <string name="receive_address_null_hint">请选择服务地址</string>
    <string name="order_pay_price_format">实付款：%s</string>

    <string name="server_address">服务地址</string>
    <string name="receive_address">收货地址</string>
    <string name="receive_address_project">地址：</string>
    <string name="receive_address_project_hint">请选择楼盘</string>
    <string name="receive_address_name">联系人：</string>
    <string name="receive_address_name_hint">请输入联系人姓名</string>
    <string name="receive_address_position">位置</string>
    <string name="receive_address_title">选择地址</string>
    <string name="receive_address_auto">设为默认</string>
    <string name="receive_address_add">新增地址</string>

    <string name="product_pay_title">订单支付</string>
    <string name="order_water_hint">如果家里没有对应品牌空桶或需要水泵请一并购买</string>
    <string name="order_tip">1.订单提交后，两个工作日内我们会有相关工作人员主动联系您，请耐心等待\n2.更多咨询，可联系客服 400-930-2220</string>
    <string name="order_count">选择购买数量</string>
    <string name="order_area_format">%1$s平方</string>
    <string name="order_price_format">%1$s元</string>
    <string name="order_detail_num">订单号：</string>
    <string name="order_detail_address">配送地点：</string>
    <string name="shop_pay_detail">订单详情</string>
    <string name="order_detail_type">配送方式：</string>
    <string name="order_detail_time">服务时间：</string>
    <string name="order_detail_pay">支付方式：</string>
    <string name="order_detail_phone">联系电话：</string>
    <string name="cancel_order_tip">是否取消当前订单?</string>
    <string name="comfirm_order_tip">是否已收到商品?</string>
    <string name="count_format_string">×%s</string>

    <string name="coupon_no_use">未使用</string>
    <string name="coupon_use">已使用</string>
    <string name="coupon_outtime">已过期</string>

    <string name="order_all">全部</string>
    <string name="order_pay">待付款</string>
    <string name="order_server">待服务</string>
    <string name="order_finish">已完成</string>

    <string name="button_submit_order">提交订单</string>
    <string name="button_update">编辑</string>
    <string name="button_delete">删除</string>
    <string name="button_reservation">立即预约</string>
    <string name="button_add_cart">加入购物车</string>
    <string name="button_buy_now">立即购买</string>
    <string name="button_order_cancel">取消订单</string>
    <string name="button_order_pay">立即付款</string>
    <string name="button_order_back">申请退款</string>
    <string name="button_order_comfirm">确认收货</string>
</resources>
