<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cjx_background_color"
    android:orientation="vertical">

    <include layout="@layout/toolbar_view" />

    <LinearLayout
        android:id="@+id/project_select_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginTop="@dimen/auto_margin"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:onClick="projectSelect"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/auto_margin"
        android:paddingRight="@dimen/auto_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/receive_address_project"
            android:textColor="@color/cjx_text_main_color"
            android:textSize="@dimen/text_size_middle" />

        <TextView
            android:id="@+id/project_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/receive_address_project_hint"
            android:textColor="@color/cjx_text_main_color"
            android:textColorHint="@color/cjx_text_secondary_color"
            android:textSize="@dimen/text_size_middle" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/auto_margin"
            android:src="@drawable/ic_enter" />

    </LinearLayout>

    <include layout="@layout/divider_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/auto_margin"
        android:paddingRight="@dimen/auto_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/receive_address_name"
            android:textColor="@color/cjx_text_main_color"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/name_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:singleLine="true"
            android:hint="@string/receive_address_name_hint"
            android:textColor="@color/cjx_text_main_color"
            android:textColorHint="@color/cjx_text_secondary_color"
            android:textSize="@dimen/text_size_middle" />

    </LinearLayout>

    <include layout="@layout/divider_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/auto_margin"
        android:paddingRight="@dimen/auto_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/register_phone"
            android:textColor="@color/cjx_text_main_color"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/phone_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:background="@null"
            android:hint="@string/register_phone_hint"
            android:inputType="phone"
            android:textColor="@color/cjx_text_main_color"
            android:textColorHint="@color/cjx_text_secondary_color"
            android:textSize="@dimen/text_size_middle" />

    </LinearLayout>

    <include layout="@layout/divider_view" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button_submit"
        style="@style/button_bottom_style"
        android:onClick="submitClick"
        android:text="@string/button_sure" />
</LinearLayout>