<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    android:background="@drawable/item_pressed_bg"
    android:padding="@dimen/auto_margin">

    <TextView
        android:id="@+id/property_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="收货人"
        android:textColor="@color/cjx_text_deep_color"
        android:textSize="@dimen/text_size_middle" />

    <TextView
        android:id="@+id/property_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/auto_margin"
        android:layout_toRightOf="@id/property_name"
        android:text="1367067519"
        android:textColor="@color/cjx_text_deep_color"
        android:textSize="@dimen/text_size_middle" />

    <TextView
        android:id="@+id/property_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/property_phone"
        android:layout_marginTop="@dimen/text_margin"
        android:text="嘉信城市花园1期2座3E"
        android:textColor="@color/cjx_text_deep_color"
        android:textSize="@dimen/text_size_middle" />

    <View
        android:id="@+id/address_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_below="@+id/property_location"
        android:layout_marginBottom="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:background="@color/cjx_divider_color" />

    <LinearLayout
        android:id="@+id/address_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address_line"
        android:background="@drawable/item_pressed_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/text_margin">

        <ImageView
            android:layout_width="@dimen/fab_margin"
            android:layout_height="@dimen/fab_margin"
            android:src="@drawable/item_select_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:text="@string/receive_address_auto" />
    </LinearLayout>

    <TextView
        android:id="@+id/address_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/address_line"
        android:layout_marginLeft="@dimen/auto_margin"
        android:background="@drawable/item_pressed_bg"
        android:padding="@dimen/text_margin"
        android:text="@string/button_delete" />

    <TextView
        android:id="@+id/address_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/address_delete"
        android:layout_below="@id/address_line"
        android:background="@drawable/item_pressed_bg"
        android:padding="@dimen/text_margin"
        android:text="@string/button_update" />
</RelativeLayout>